[project]
name = "base16numerology-ebook"
version = "0.1.0"
description = "Manuscript and build script for the Base 16 Numerology ebook."
requires-python = ">=3.10"
dependencies = [
  "markdown>=3.5",
  "python-markdown-math>=0.8",
  "latex2mathml>=3.77",
]

[tool.uv]
# `uv` will create/update `uv.lock` when you run `uv lock` / `uv sync`.
